--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </ul>
         </li>
         <li><a href="#deal">Deals</a></li>
-       <li><a href="#">Contact</a></li>
+       <li><a href="#contacts">Contact</a></li>
       </ul>
     <!-- Toggle Button-->
       <div class="nav-toggle">
@@ -185,7 +185,7 @@
 <!--Deals section start-->
 <div class="deal" id="deal">
     <div class="content">
-        <h3 class="title">Deal Of The Day</h3>
+        <h3 class="title">Deals Of The Day</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut
         enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
         consequatur</p>
@@ -212,6 +212,27 @@
 </div>
 </div>
 <!--Deal Section End-->
+
+<!-- Contact Section Starts-->
+<div class="contacts" id="contacts">
+    
+        <h2 class="contact-head">Contact <span>Us</span></h2>
+   
+          <form action="">
+            <div class="input-box">
+            <input type="text" placeholder="Name">
+            <input type="email" placeholder="Email">
+            </div>
+            <div class="input-box">
+                <input type="text" placeholder="Number">
+                <input type="text" placeholder="Subject">
+            </div>
+            <textarea placeholder="Message" cols="30" rows="10"></textarea>
+            <div><button class="btn-contact">Send message</button></div>
+        </form>
+    </div>
+</div>
+<!-- Contact Section Ends-->
 
 <!-- footer section Start-->
 <div class="footer">
