--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <li><a href="#features">Features</a></li>
     <li><a href="#product-dis">Products</a></li>
     <li><a href="#deal">Deals</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#contacts">Contact</a></li>
 </ul>
 </div>
 <div class="footer-links">
