--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
     <div class="main-navbar ">
         <!-- Navigation Links Start-->
-        <ul class="nav-links">
+        <ul class="nav-links show_nav" >
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#features">Features</a></li>
             
